add project 2 part 1

--- a/new_projects.html
+++ b/new_projects.html
@@ -23,10 +23,10 @@
         <div class="grid-container">
                 
             <div class="grid-item">
-                <img src="game_img.png" alt="p5js projects">
+                <img src="9prototypes_p2/not_found.png" alt="404 Not Found">
             </div>
             <div class="grid-item">
-                <p><a href="p5js.html">24F p5js projects</a></p>
+                <p><a href="https://editor.p5js.org/zhanr306/full/46tgvp-9D">25S Project 2, Part 1</a></p>
             </div>
             
         </div>
