--- a/new_projects.html
+++ b/new_projects.html
@@ -26,7 +26,21 @@
                 <img src="project_2/poster_1.png" alt="poster_1">
             </div>
             <div class="grid-item">
-                <p><a href="cclab_project2.html">CC lab project: PInteractive Typography</a></p>
+                <p><a href="cclab_project2.html">CC lab project 2: PInteractive Typography</a></p>
+            </div>
+
+            <div class="grid-item">
+                <img src="cc_p3.png" alt="cc_p3">
+            </div>
+            <div class="grid-item">
+                <p><a href="https://lucyyy224.github.io/Project-3_cclab/">CC lab project 3: Your Perfect Puppy Match</a></p>
+            </div>
+
+            <div class="grid-item">
+                <img src="cc_p4.png" alt="cc_p4">
+            </div>
+            <div class="grid-item">
+                <p><a href="https://lucyyy224.github.io/project-4_cclab/">CC lab project 4: Your Perfect Puppy Match</a></p>
             </div>
 
             
