--- a/cclab.html
+++ b/cclab.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art Projects</title>
+    <title>25S javascript projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,24 +23,31 @@
         <div class="grid-container">
                 
             <div class="grid-item">
-                <img src="project_2/poster_1.png" alt="poster_1">
+                <img src="project_2/poster1.gif" alt="poster_1">
             </div>
             <div class="grid-item">
-                <p><a href="cclab_project2.html">CC lab project 2: PInteractive Typography</a></p>
+                <p><a href="cclab_project2.html">Interactive Posters</a></p>
             </div>
 
             <div class="grid-item">
                 <img src="cc_p3.png" alt="cc_p3">
             </div>
             <div class="grid-item">
-                <p><a href="https://lucyyy224.github.io/Project-3_cclab/">CC lab project 3: Your Perfect Puppy Match</a></p>
+                <p><a href="https://lucyyy224.github.io/Project-3_cclab/">Gesture Interactive Camera</a></p>
             </div>
 
             <div class="grid-item">
                 <img src="cc_p4.png" alt="cc_p4">
             </div>
             <div class="grid-item">
-                <p><a href="https://lucyyy224.github.io/project-4_cclab/">CC lab project 4: Your Perfect Puppy Match</a></p>
+                <p><a href="https://lucyyy224.github.io/project-4_cclab/">Your Perfect Puppy Match</a></p>
+            </div>
+
+            <div class="grid-item">
+                <img src="cc_p5.png" alt="cc_p5">
+            </div>
+            <div class="grid-item">
+                <p><a href="https://lucyyy224.github.io/final-cclab/">Clothing Style Devination</a></p>
             </div>
 
             
