--- a/project.html
+++ b/project.html
@@ -46,11 +46,20 @@
             </div>
             
             <div class="grid-item">
-                <img src="upcom_img.png" alt="25S upcoming projects">
+                <img src="project_2/poster3.gif" alt="25S javascript projects">
             </div>
             <div class="grid-item">
-                <p><a href="new_projects.html">here will be some upcoming projects....</a></p>
+                <p><a href="cclab.html">25S javascript projects</a></p>
             </div>
+
+            <div class="grid-item">
+                <img src="corelab/birdgame.png" alt="25S Unity projects">
+            </div>
+            <div class="grid-item">
+                <p><a href="corelab.html">25S Unity projects</a></p>
+            </div>
+
+            
         </div>
     </section>
 </body>
