--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <p>Hi, I'm Lucy Zhang. I'm a visual artist and writer. I love illustrations, video games, musics, and books. </p>
         <br>
         <p>This is my portfolio website.</p>
-        <br>
-        <p><a href="new_projects.html">Directly go to advanced cc lab projects</a></p>
+        <!-- <br>
+        <p><a href="new_projects.html">Directly go to advanced cc lab projects</a></p> -->
     </div>
 
 
