--- a/p5js.html
+++ b/p5js.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Page</title>
+    <title>p5.js Projects</title>
     <link rel="stylesheet" href="p5jsstyle.css">
 </head>
 
